crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_invalid_checksum_and_published_at-2.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 176
expression: parse_manifest_error(&published_at_manifest)?
---
InvalidPublishedAt {
    value: "not-a-date",
}
