crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_invalid_checksum_and_published_at-3.snap
---
source: crates/resources/tests/manifest_foundation.rs
expression: parse_manifest_error(&platform_manifest)?
---
UnsupportedPlatform {
    platform: "linux-amd64",
}
