crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_invalid_checksum_and_published_at-4.snap
---
source: crates/resources/tests/manifest_foundation.rs
expression: parse_manifest_error(&url_manifest)?
---
InvalidArtifactUrl {
    url: "http://artifacts.example.test/redis-7.2.5-pv1-darwin-arm64.tar.gz",
}
