crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_invalid_checksum_and_published_at.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 175
expression: parse_manifest_error(&checksum_manifest)?
---
InvalidIdentity {
    kind: "sha256",
    value: "bad",
}
