crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_invalid_revocation_state-2.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 212
expression: parse_manifest_error(&unexpected_reason)?
---
InvalidRevocationState {
    reason: "revocation_reason requires revoked=true",
}
