crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_latest_as_a_concrete_track_name-2.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 146
expression: parse_manifest_error(&track_latest)?
---
ReservedTrackName {
    name: "latest",
}
