crates/resources/tests/snapshots/manifest_foundation__manifest_rejects_latest_as_a_concrete_track_name.snap
---
source: crates/resources/tests/manifest_foundation.rs
assertion_line: 139
expression: parse_manifest_error(&default_latest)?
---
ReservedTrackName {
    name: "latest",
}
